# serializer version: 1
# name: TestHalfCheetahCostEqual.test_snapshot
  -0.01222431204959
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.1
  0.071719583982276
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.10
  0.077779193542895
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.100
  -0.179080585976348
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.101
  -0.621229479351718
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.102
  -0.39066849019684
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.103
  -1.523971353336832
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.104
  2.394305850680926
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.105
  -5.989641083835947
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.106
  9.530529347674888
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.107
  -2.722407274740522
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.108
  6.966329501727748
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.109
  2.34642463980273
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.11
  0.006603069756122
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.110
  1.0
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.111
  -1.791200400827221
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.112
  -0.791200400827221
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.113
  3.208398875923596
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.114
  False
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.115
  False
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.116
  dict({
    'cost_ctrl': 0.000235420203209,
    'cost_velocity': 3.208398875923596,
    'x_position': -0.016837079339511,
    'x_velocity': -0.791200400827221,
  })
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.117
  -0.124548533498094
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.118
  -0.025713747222351
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.119
  0.355993967662725
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.12
  0.112724120696803
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.120
  0.006771715744487
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.121
  0.125392930760725
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.122
  -0.45300254095265
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.123
  0.022034629411397
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.124
  0.143257631691053
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.125
  -0.165669422408253
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.126
  0.174584177910943
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.127
  2.861020828424744
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.128
  1.295999124186013
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.129
  -6.711175967348264
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.13
  0.046750934225205
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.130
  -4.075213459534094
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.131
  -3.209430135623552
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.132
  -10.886497949362548
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.133
  7.281018089359993
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.134
  1.0
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.135
  -1.254916821166285
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.136
  -0.254916821166285
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.137
  1.574816228046094
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.138
  False
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.139
  False
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.14
  -0.085929246288324
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.140
  dict({
    'cost_ctrl': 0.000213195252419,
    'cost_velocity': 1.574816228046094,
    'x_position': -0.029582920397825,
    'x_velocity': -0.254916821166285,
  })
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.15
  0.03687507840825
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.16
  -0.0958882600829
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.17
  1.0
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.18
  -1.0
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.19
  0.0
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.2
  0.039473605811873
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.20
  dict({
  })
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.21
  -0.029866364626963
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.22
  0.076352809357885
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.23
  0.156981735260103
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.24
  -0.11491253293411
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.25
  0.28095868622709
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.26
  0.221791306416084
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.27
  -0.290783321052669
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.28
  0.247437968100092
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.29
  0.324160516314654
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.3
  -0.08116453042247
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.30
  -0.626462322760486
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.31
  -0.024915438596136
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.32
  3.2190612683933
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.33
  -0.456131535356257
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.34
  4.529667805541006
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.35
  4.081167405359172
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.36
  -8.261650910871076
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.37
  8.781504182819518
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.38
  1.0
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.39
  -0.769488186329049
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.4
  0.095124470327351
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.40
  0.230511813670951
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.41
  0.592112068899969
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.42
  False
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.43
  False
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.44
  dict({
    'cost_ctrl': 0.000254897212982,
    'cost_velocity': 0.592112068899969,
    'x_position': 0.06631680039474,
    'x_velocity': 0.230511813670951,
  })
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.45
  -0.077070254003748
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.46
  0.02666886278063
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.47
  0.284836861908379
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.48
  0.194537047630191
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.49
  -0.157419108015609
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.5
  0.052227940398071
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.50
  0.135698573495489
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.51
  -0.279561043859024
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.52
  0.541750624674746
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.53
  -0.265059149279457
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.54
  -1.092801814148789
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.55
  -1.16101682059065
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.56
  2.300104751499276
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.57
  7.516875686967678
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.58
  -12.063398855021548
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.59
  -4.24322714295268
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.6
  0.057212861055391
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.60
  4.251792379477341
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.61
  -0.522442646246258
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.62
  1.0
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.63
  -1.059247186708542
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.64
  -0.059247186708543
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.65
  1.122004602549962
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.66
  False
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.67
  False
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.68
  dict({
    'cost_ctrl': 0.000195843696594,
    'cost_velocity': 1.122004602549962,
    'x_position': 0.063354441059313,
    'x_velocity': -0.059247186708543,
  })
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.69
  -0.115524701422574
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.7
  -0.074377273464891
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.70
  -0.027285689061942
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.71
  0.240257349709452
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.72
  0.45138263655845
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.73
  -0.264308639599001
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.74
  -0.145356644344892
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.75
  -0.007572006826729
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.76
  0.018442937262636
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.77
  -1.154940187862894
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.78
  -0.273740253314857
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.79
  -1.573747169248097
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.8
  -0.085304392757358
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.80
  -2.138607924623985
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.81
  2.649014740643151
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.82
  2.950270415254381
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.83
  -3.159400622952283
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.84
  2.027604455031756
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.85
  -13.829202390798548
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.86
  1.0
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.87
  -1.812630007149259
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.88
  -0.812630007149259
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.89
  3.285627542817922
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.9
  0.087939797486283
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.90
  False
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.91
  False
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.92
  dict({
    'cost_ctrl': 0.000158283114433,
    'cost_velocity': 3.285627542817922,
    'x_position': 0.02272294070185,
    'x_velocity': -0.812630007149259,
  })
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.93
  -0.129041161382361
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.94
  -0.101819692575426
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.95
  0.287686302772488
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.96
  0.251364752358212
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.97
  0.192129448737894
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.98
  -0.324347128350327
# ---
# name: TestHalfCheetahCostEqual.test_snapshot.99
  0.317803363489146
# ---
